# Multiplatform-SDK-Template

./: .gitmodules  README.md
Android/: .gitignore  build.gradle  settings.gradle
Android/Application/: build.gradle
Android/Application/Signing_Keys/: Development.key
Android/Application/src/main/: AndroidManifest.xml
Android/Application/src/main/java/example/sdk/client/: MainActivity.kt
Android/Application/src/main/res/drawable/: ic_launcher_foreground.xml
Android/Application/src/main/res/layout/: activity_main.xml
Android/Application/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
Android/Application/src/main/res/values-night/: themes.xml
Android/SDK/: build.gradle  conanInstall.sh  conanPrepare.sh
Android/SDK/src/androidTest/java/example/sdk/: CallbackTest.kt  ExampleInstrumentedTest.kt  NativeHttpsCallTest.kt
Android/SDK/src/main/: AndroidManifest.xml
Android/SDK/src/main/java/example/sdk/: Callback.kt  CallbackWithData.kt  SDK.kt
Android/SDK/src/main/java/example/sdk/model/: BoostInfo.kt
Android/SDK/src/test/java/example/sdk/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Native/: CMakeLists.txt  library.cpp  library.h
Native/CMake/Boost/: CMakeLists.txt
Native/CMake/Build_Type/: CMakeLists.txt
Native/CMake/Conan/: CMakeLists.txt
Native/CMake/Gtest/: CMakeLists.txt
Native/CMake/Install/: CMakeLists.txt
Native/CMake/JNI/: CMakeLists.txt
Native/CMake/OpenSSL/: CMakeLists.txt
Native/CMake/Standard/: CMakeLists.txt
Native/CMake/Toolchain/: CMakeLists.txt
Native/CMake/Version/: CMakeLists.txt
Native/Implementation/: BoostInfo.cpp  BoostInfo.h  CMakeLists.txt  buildAndInstall.sh  library.cpp  library.h
Native/JNI/: .gitignore  CMakeLists.txt  buildAndInstall.sh  conanfile.txt  jni_library.cpp  jni_library.h  library.cpp  library.h
Native/Test/: CMakeLists.txt  buildAndTest.sh  conanfile.txt  test.cpp  test.h
